--- a/docs/src/components/Logo.styl
+++ b/docs/src/components/Logo.styl
@@ -1,15 +1,10 @@
 @import "../utils.styl"
 @import "../vars.styl"
 
-// if $darkMode
-//   $boxShadow = rgba(10, 10, 11, 0.2) 0px 7px 29px 0px;
-// else
-//   $boxShadow = rgba(40, 50, 52, 0.1) 0px 7px 29px 0px;
-
 $logoSize = 48px;
 
 .logo
-  --logo-size: $logoSize
+  --logo-size: $logoSize;
   flexRow(calc(var(--logo-size) / 16));
   align-items: flex-end;
   &-icon
@@ -19,20 +14,17 @@ $logoSize = 48px;
     font-size: calc(var(--logo-size) / 2);
     width: var(--logo-size);
     height: var(--logo-size);
-    font-weight: 600;
+    font-weight: var(--font-weight-black);
     padding-right: calc(var(--logo-size) / 8);
     padding-bottom: calc(var(--logo-size) / 8);
     line-height: 1;
-    // padding: 1.5rem 0.8rem 0rem 1.5rem;
-    border-bottom-left-radius: $borderRadius;
-    border-bottom-right-radius: $borderRadius;
-    // background-color: darken(bgWindowHeader, 20);
-    background-color: $accent;
-    // box-shadow: $boxShadow;
+    border-bottom-left-radius: var(--radius-md);
+    border-bottom-right-radius: var(--radius-md);
+    background-color: var(--clr-accent-500);
     &:hover
-      background-color: lighten($accent, 3);
+      background-color: var(--clr-accent-400);
   &-title
-    color: $accent;
-    font-weight: 600;
+    color: var(--clr-accent-500);
+    font-weight: var(--font-weight-bold);
     font-size: calc(var(--logo-size) * 0.75);
     line-height: 1.15;
