--- a/docs/src/components/Menu.styl
+++ b/docs/src/components/Menu.styl
@@ -23,7 +23,7 @@ indicator-active()
   font-weight: 400;
   &-item
     position: relative;
-    color: var(--clr-fgText);
+    color: var(--clr-fg-text);
     cursor pointer;
     padding: 1rem 0;
     text-decoration: none;
