--- a/docs/src/components/MultilangWindow.styl
+++ b/docs/src/components/MultilangWindow.styl
@@ -3,6 +3,6 @@
 
 .window-multilang
   .tabs
-    flexRow(4px);
-    padding-left: $borderRadius;
-    padding-bottom: 8px;
+    flexRow();
+    padding-left: var(--space-4);
+    padding-bottom: var(--space-1);
