--- a/docs/src/components/Window.styl
+++ b/docs/src/components/Window.styl
@@ -1,35 +1,10 @@
 @import "../utils.styl"
 @import "../vars.styl"
 
-lightTheme()
-  --clr-bgCode: $bgCodeMainLight;
-  --clr-fgCode: black;
-  --clr-bgWindowHeader: $yellowLight;
-  // --clr-border: hsl(36deg 10% 87%);
-  --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  --clr-codeCommentsFg: $grayLight;
-
-darkTheme()
-    --clr-bgCode: $bgCodeMainDark;
-    --clr-fgCode: white;
-    --clr-bgWindowHeader: #12171e;
-    // --clr-border: #434342;
-    --clr-boxShadow: rgba(0, 0, 0, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
-    --clr-codeCommentsFg: $gray;
-
 .window
-  &.light
-    lightTheme()
-  &.dark
-    darkTheme()
-
   flexColumn(0);
-  background-color: var(--clr-bgCode);
+  background-color: var(--clr-bg-code);
   border-radius: $borderRadius;
-  // box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  // box-shadow: $boxShadow;
-  // box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-  // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   border: 1px solid var(--clr-border);
 
   font-size: $codeFontSize;
@@ -41,18 +16,18 @@ darkTheme()
       font-size: $codeMinFontSize;
 
   .header
-    flexRow($borderRadius);
-    padding: "calc(%s / 1.5)" % $borderRadius $borderRadius;
+    flexRow(var(--space-4));
+    padding: var(--space-2) var(--space-4);
     align-items: center;
-    border-top-left-radius: $borderRadius;
-    border-top-right-radius: $borderRadius;
-    background-color: var(--clr-bgWindowHeader);
+    border-top-left-radius: var(--radius-lg);
+    border-top-right-radius: var(--radius-lg);
+    background-color: var(--clr-bg-window-header);
     border-bottom: 1px solid var(--clr-border);
     .icons
-      flexRow(10px);
+      flexRow(var(--space-2));
       .icon
-        width: $borderRadius;
-        height: $borderRadius;
+        width: var(--size-3);
+        height: var(--size-3);
         display: flex;
         border-radius: 50%;
         &.red
@@ -63,8 +38,5 @@ darkTheme()
           background-color: $appIconGreen;
     .name
       line-height: 1;
-      font-size: .9rem;
-      color: var(--clr-fgCode);
-  .content
-    flexRow();
-    background-color: unset;
+      font-size: var(--font-size-md);
+      color: var(--clr-fg-code);
