--- a/docs/src/components/WithLineNumbers.styl
+++ b/docs/src/components/WithLineNumbers.styl
@@ -4,7 +4,7 @@
 .line
   flexRow();
   &>span:nth-child(1)
-    color: var(--clr-codeCommentsFg);
+    color: var(--clr-fg-code-comment);
     padding: 0 1em 0 .5em;
     cursor: default;
     -webkit-user-select: none;
