--- a/docs/src/index.styl
+++ b/docs/src/index.styl
@@ -7,10 +7,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --clr-bg: #fcfaf2;
-  --clr-fg: #242424;
+  --clr-bg: red;
+  --clr-fg: yellow;
 
 @media (prefers-color-scheme: light)
   :root
-    --clr-bg: #242424;
-    --clr-fg: #fcfaf2;
+    --clr-bg: green;
+    --clr-fg: blue;
