--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -54,7 +54,7 @@ $bgMainLight = white;
 $bgSecondaryLight = hsl(195deg 20% 98%);
 // $bgMainLight = #f2f5f6;
 // $bgSecondaryLight = white;
-$titleLight = #050505;
+$titleLight = hsl(195deg 64% 26%);
 $textLight = #313131;
 $fgSecondaryLight = #91918e;
 $mediumLight = #cac1a9;
@@ -108,8 +108,8 @@ $codeFontMinOutWidth = 777px;
 
 
 $titleResponsiveFontSize = 3.8vw;
-$titleMinFontSize = 32px;
-$titleMaxFontSize = 52px;
+$titleMinFontSize = 36px;
+$titleMaxFontSize = 50px;
 // 100 * $titleMaxFontSize / $titleResponsiveFontSize
 $titleFontMaxOutWidth = 1368px;
 // 100 * $titleMinFontSize / $titleResponsiveFontSize
