--- a/vis/src/components/IncDecInput/IncDecInput.scss
+++ b/vis/src/components/IncDecInput/IncDecInput.scss
@@ -7,7 +7,7 @@
   input {
     background: none;
     border: none;
-    color: var(--clr-fgText);
+    color: var(--clr-fg-text);
     outline: none;
     padding: 0rem 1rem;
     font-size: 1.2rem;
