--- a/docs/src/components/Code.styl
+++ b/docs/src/components/Code.styl
@@ -3,12 +3,12 @@
 
 .code
   flex: 1;
-  color: var(--clr-fgCode);
-  font-size: $fontSizeCode;
-  font-family: $fontMono;
-  font-weight: 600;
-  line-height: 1.35;
-  padding: $borderRadius .75em $borderRadius 1em;
+  color: var(--clr-fg-code);
+  font-size: var(--font-size-md);
+  font-family: var(--font-mono);
+  font-weight: var(--font-weight-medium);
+  line-height: 1.5;
+  padding: var(--space-2) var(--space-4) var(--space-2) var(--space-4);
   background-color: unset;
   box-shadow: none;
   display: flex;
