--- a/docs/src/components/LanguageTab.styl
+++ b/docs/src/components/LanguageTab.styl
@@ -1,29 +1,31 @@
+@import "../utils.styl";
+
 indicator()
   position: absolute;
-  bottom: .25em;
-  left: calc((100% - 80%)/2);
-  right: calc((100% - 80%)/2);
-  height: .5em;
-  background-color: var(--clr-fgMedium);
+  bottom: var(--space-1-5);
+  left: 10%;
+  right: 10%;
+  height: var(--size-1);
+  background-color: var(--clr-second-300);
   // border-radius: 100vw;
   transform: scaleX(0);
-  transition: transform 150ms ease-in;
+  commonTransitions();
 
 indicator-active()
   transform: scaleX(1);
 
 .tab
   position: relative;
-  color: darken(white, 60);
-  padding: .5rem .5rem;
+  color: var(--clr-neutral-400);
+  padding: var(--space-2) var(--space-2);
   cursor: pointer;
   &-caption
     position: relative;
   &-indicator
     indicator()
   &:hover
-    color: var(--clr-fgText);
+    color: var(--clr-fg);
   &-active
     .tab-indicator
       indicator-active()
-    color: var(--clr-fgText);
+    color: var(--clr-fg);
