--- a/docs/src/components/Lines.styl
+++ b/docs/src/components/Lines.styl
@@ -4,8 +4,8 @@
 .line
   flexRow();
   &>span:nth-child(1)
-    color: var(--clr-codeCommentsFg);
-    padding: 0 1em 0 .5em;
+    color: var(--clr-fg-code-comment);
+    padding: 0 var(--space-3) 0 var(--space-2);
     cursor: default;
     -webkit-user-select: none;
     user-select: none;
