--- a/docs/src/components/Options.styl
+++ b/docs/src/components/Options.styl
@@ -3,15 +3,15 @@
 
 .options
   display: grid;
-  row-gap: 1em;
-  column-gap: 1em;
-  font-family: $fontMono;
+  row-gap: var(--space-4);
+  column-gap: var(--space-4);
   grid-template-columns: max-content 1fr;
   grid-template-rows: repeat(min-content);
   &-item
-    line-height: 1.3;
     &-name
-      font-weight: 600;
+      font-family: var(--font-mono);
+      font-weight: var(--font-weight-bold);
     &-desc
-      font-weight: 400;
-      font-family: $fontRegular;
+      font-weight: var(--font-weight-normal);
+      font-family: var(--font-body);
+      line-height: 1.5;
