--- a/docs/src/uikit/TopBar.styl
+++ b/docs/src/uikit/TopBar.styl
@@ -7,7 +7,7 @@
   width: 100%;
   .strip
     width: 100%;
-    height: 4px;
+    height: var(--space-1);
     background-color: $accent;
   .topbar
     flexRow();
@@ -18,7 +18,7 @@
     @media screen and (max-width: $breakHeaderMenu)
       flex-direction: column;
       &-menu
-        padding-top: .5em;
+        padding-top: var(--space-2);
     &-header
       grid-area: header;
       color: white;
