--- a/docs/src/utils.styl
+++ b/docs/src/utils.styl
@@ -1,13 +1,14 @@
 transRegular = 150ms ease-in
 
-boxShadowLight()
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+commonTransitions()
+  transition-property: var(--tr-props-common);
+  transition-duration: var(--tr-duration-normal);
+  transition-timing-function: var(--tr-easing-ease-in);
 
-boxShadowMedium()
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
-boxShadowStrong()
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+colorTransitions()
+  transition-property: var(--tr-props-colors);
+  transition-duration: var(--tr-duration-normal);
+  transition-timing-function: var(--tr-easing-ease-in);
 
 // safari < 14.4, IE 11 does not support gap property on flex
 // https://caniuse.com/flexbox-gap
