--- a/vis/src/components/Duplicate/DefinitionSnippet.scss
+++ b/vis/src/components/Duplicate/DefinitionSnippet.scss
@@ -7,7 +7,7 @@
   .sat--def {
     opacity: 1;
     font-weight: bolder;
-    background-color: hsl(195deg 58% 96%);
+    background-color: var(--clr-bg-snippet-highlighted);
     &.sat--found {
       background-color: var(--clr-acco);
     }
@@ -15,6 +15,14 @@
   .line {
     &>span:nth-child(1) {
       width: 5ch;
+    }
+    &>span:nth-child(2) {
+      // display: flex;
+      flex-wrap: wrap;
+      flex: 1;
+      &>span:last-child {
+        // flex: 1;
+      }
     }
   }
 }
