--- a/vis/src/components/Duplicate/Title.scss
+++ b/vis/src/components/Duplicate/Title.scss
@@ -1,20 +1,23 @@
 .title {
   display: grid;
-  column-gap: .5rem;
-  grid-template-columns: 3ch repeat(3, max-content);
-  place-items: baseline;
-  padding: .5rem;
-  padding-left: 1rem;
+  column-gap: var(--space-2);
+  grid-template-columns: var(--size-8) repeat(1, max-content) 1fr;
+  place-items: center;
+  justify-items: flex-end;
+  padding: var(--space-1) var(--space-2);
   h2 {
-    color: var(--clr-fgTitle);
+    color: var(--clr-neutral-900);
     display: flex;
-    font-size: 1.15rem;
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-normal);
   }
   .count {
-    font-size: 1rem;
+    font-size: var(--font-size-sm);
+    color: var(--clr-fg);
   }
   .type-icon {
-    font-size: 1.35rem;
-    font-weight: 800;
+    font-size: var(--font-size-lg);
+    font-weight: var(--font-weight-bold);
+    color: var(--clr-neutral-500);
   }
 }
