--- a/vis/src/components/Listing/Listing.scss
+++ b/vis/src/components/Listing/Listing.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  color: var(--clr-fgSecondary);
 }
 .info {
   display: flex;
   flex-direction: column;
   gap: 1em;
   padding: 2rem 1rem;
+  color: var(--clr-neutral-600);
 
   .tooltip {
     margin-left: .5rem;
@@ -23,6 +23,6 @@
 }
 
 .strong {
-  font-weight: 500;
-  color: var(--clr-fgText);
+  font-weight: var(--font-weight-semibold);
+  color: var(--clr-neutral-700);
 }
