--- a/vis/src/components/Search/Search.scss
+++ b/vis/src/components/Search/Search.scss
@@ -11,19 +11,19 @@
     flex: 1;
     border: none;
     background-color: transparent;
-    color: var(--clr-fgText);
+    color: var(--clr-fg-text);
     font-family: monospace;
     font-size: 1.2rem;
     padding: 1rem 1rem;
     transition: background-color 150ms ease-in;
-    @include focusable($accent);
+    @include focusable(var(--clr-accent));
     
     &::placeholder {
-      color: var(--clr-fgText);
+      color: var(--clr-fg-text);
       opacity: 0.6;
     }
     &:focus-visible {
-      background-color: var(--clr-bgBorder);
+      background-color: var(--clr-neutral-50);
     }
   
   }
@@ -32,10 +32,10 @@
     border: none;
     background-color: transparent;
     padding: 0.6rem 1.2rem;
-    transition: background-color 150ms ease-in;
+    // transition: background-color 150ms ease-in;
 
-    &:hover {
-      background-color: var(--clr-bgBorder);
-    }
+    // &:hover {
+    //   background-color: var(--clr-neutral-50);
+    // }
   }
 }
