--- a/vis/src/hooks/useTooltip/Tooltip.scss
+++ b/vis/src/hooks/useTooltip/Tooltip.scss
@@ -8,43 +8,31 @@
   .content {
     position: fixed;
     pointer-events: none;
-    z-index: var(--z-always-visible);
-    // z-index: 200;
-    // transform: translateX(-100%);
-    // display: inline-block;
-
+    z-index: var(--z-tooltip);
     max-width: 320px;
     width: 100%;
-
     display: block;
-    // color: white;
-    // background-color: gray;
-    // font-size: 0.75rem;
-    // padding: .25rem .5rem;
-    // border-radius: 4px;
     opacity: 0;
-    // display: none;
 
-    transition: opacity 150ms 100ms ease-in, transform 150ms 50ms ease-in;
+    transition-property: var(--tr-props-common);
+    transition-duration: var(--tr-duration-normal);
+    transition-timing-function: var(--tr-easing-ease-in);
     transform-origin: top center;
     
     &--visible {
-      // z-index: 10;
       opacity: 1;
       transform: scale(1);
-      // visibility: visible;
     }
     &--invisible {
       opacity: 0;
       transform: scale(1);
-      // visibility: hidden;
     }
   }
 
   .tooltip-content {
     display: inline-block;
     color: white;
-    background-color: gray;
+    background-color: var(--clr-neutral-600);
     font-size: 0.75rem;
     padding: .25rem .5rem;
     border-radius: 4px;
@@ -53,7 +41,7 @@
   .content-tooltip {
     display: inline-block;
     color: white;
-    background-color: gray;
+    background-color: var(--clr-neutral-600);
     font-size: 0.75rem;
     padding: .25rem .5rem;
     border-radius: 4px;
