style: clean styles

--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -7,11 +7,11 @@ $zOverlay = 10
 // Source Sans Pro
 // Golos Text
 // Work Sans
-$fontRegular = 'Mona Sans', sans-serif
+// $fontRegular = 'Mona Sans', sans-serif
 // Inconsolata
-$fontTitle = 'Exo 2', sans-serif
+// $fontTitle = 'Exo 2', sans-serif
 // Mullish
-$fontMono = 'Lab Mono', monospace
+// $fontMono = 'Lab Mono', monospace
 
 $accent = hsl(195deg 88% 33%);
 
