--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -120,6 +120,7 @@ main {
       .filters-menu {
         position: fixed;
         right: 0;
+        top: var(--space-2);
         z-index: var(--z-banner);
       }
       @media screen and (max-width: 1536px) {
